[project]
name = "facial-recognition-project"
version = "0.1.0"
description = "A robust facial recognition system leveraging PyTorch and OpenCV."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML >= 5.4.1",
    "matplotlib>=3.10.8",
    "mediapipe<0.10.10",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
